--- a/Src/settings.json
+++ b/Src/settings.json
@@ -1,7 +1,7 @@
 {
-   "block_period": "2022-12-12",
-   "inn":3800020344,
-   "short_name":"ООО Ромашка",
-   "is_first_start": false,
-   "report_mode":"json"
+    "block_period": "2021-01-01",
+    "inn": 3800020344,
+    "is_first_start": false,
+    "report_mode": "json",
+    "short_name": "ООО Ромашка"
 }
