--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,11 @@
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        ".",
+        "./Tst",
         "-p",
         "*_test.py"
     ],
     "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.unittestEnabled": true,
+    "testExplorer.addToEditorContextMenu": true
 }
