--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - ./settings.prod.json:/app/Src/settings.json  
       - ./storage.prod.json:/app/Src/storage.json
 
+
   patterns-command:
     container_name: patterns-command
     image: patterns
@@ -16,6 +17,8 @@ services:
     volumes:
       - ./settings.prod.json:/app/Src/settings.json  
       - ./storage.prod.json:/app/Src/storage.json    
+
+# для portainer
 
   twportainer:
     image: portainer/portainer-ce:latest
